--- a/main.css
+++ b/main.css
@@ -26,3 +26,8 @@ menu{
     flex-direction: row !important;
     list-style: none;
 }
+
+.navbar-brand{
+    padding-left: 0.3em;
+    border-bottom: solid rgb(120120,120) thin;
+}
